
####################################################################################################################

v0.4.6 --- Released: Not Yet!

	Additions:
		Gameplay:
			-
		UI:
			-

	Changes:
		-

	Fixes:
		- Players no longer get 'stuck' to walls, can move in other directions while holding the key that causes the collision - Fixes #59

	Other:
		- Updated variable declarations from being var or let to const when the variable should not be modified
			- IMPORTANT: const Socket_List = {} does not mean Socket_List's object is never modified, it is, but rather the variable is never reassigned
			- const packs = ServerGame.getFrameUpdateData(); is const because packs is never redefined in it's lifetime. Once the setInterval runs again, it is defined for the first time, again.

	SPECIAL THANKS:

####################################################################################################################

v0.4.5 --- Released: 5-17-2017

	Additions:
		Gameplay:
			- Expanded map to 2x it's size (3200x1800), will be eventually 4x (6400x3840)
			- Changed Player's weapons to be on the outside of their body
				- Player's weapons also go transparent when they are invincible
			- Changed players to be fully colored in (just black for now)
			- Blocks now show their health
				- Starts whiteish with a tinge of red, to more red, to a darker red, then gone
			- Players respawn only in the middle of a tile
		UI:
			- Moved Player name to be on top of player
			- Moved Player Ammo up a pixel
			- Player name and Ammo are less transparent
			- Removed Gun when player is in build mode
			- Brought HP bar closer, made it a bit longer
			- Cursor changes to 'wait' cursor when reloading (This is temporary)
			- If the player cannot place a block, selection highlight is bright red

	Changes:
		- Changed grid.png to be 4x it's original size (Was: 1600x900, Now: 6400x3840) - Fixes #48
			- However, due to #53, a 2x version will be used (3200x1800)