@@ -17,6 +17,9 @@ v0.4.6 --- Released: Not Yet!
 
 	Fixes:
 		- Players no longer get 'stuck' to walls, can move in other directions while holding the key that causes the collision - Fixes #59
+		- Changed bullet collisions with players to use AABB, collisions much more accurate - Fixes #70
+		- Bullets now sample from a line drawn from their current position + 25% of the distance to what their new position will be - Fixes #58
+			- This means bullets check the 4 positions (not starting position) along the distance (25%, 50%, 75%, newPos) for collisions
 
 	Other:
 		- Updated variable declarations from being var or let to const when the variable should not be modified
